tests/snapshots/snapshots__budget_structs_level1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 180 → level 1 (172 words)

README.md
     1→# Archived project. No maintenance.
     8→# Structs [![GoDoc](http://img.shields.io/badge/go-documentation-blue.svg?style=flat-square)](http://godoc.org/github.com/fatih/structs) [![Build Status](http://img.shields.io/travis/fatih/structs.svg?style=flat-square)](https://travis-ci.org/fatih/structs) [![Coverage Status](http://img.shields.io/coveralls/fatih/structs.svg?style=flat-square)](https://coveralls.io/r/fatih/structs)
    16→## Install
    22→## Usage and Examples
    74→### Struct methods
    95→### Field methods
   163→## Credits
   168→## License
field.go
     9→var
    10→	errNotExported
    11→	errNotSettable
    16→type Field
    24→func (f *Field) Tag
    30→func (f *Field) Value
    35→func (f *Field) IsEmbedded
    40→func (f *Field) IsExported
    46→func (f *Field) IsZero
    54→func (f *Field) Name
    59→func (f *Field) Kind
    66→func (f *Field) Set
    89→func (f *Field) Zero
   102→func (f *Field) Fields
   108→func (f *Field) Field
   119→func (f *Field) FieldOk
structs.go
    10→var
    14→	DefaultTagName
    19→type Struct
    27→func New
    81→func (s *Struct) Map
    89→func (s *Struct) FillMap
   174→func (s *Struct) Values
   222→func (s *Struct) Fields
   233→func (s *Struct) Names
   245→func getFields
   275→func (s *Struct) Field
   287→func (s *Struct) FieldOk
   318→func (s *Struct) IsZero
   365→func (s *Struct) HasZero
   398→func (s *Struct) Name
   405→func (s *Struct) structFields
   428→func strctVal
   445→func Map
   451→func FillMap
   457→func Values
   463→func Fields
   469→func Names
   475→func IsZero
   481→func HasZero
   487→func IsStruct
   503→func Name
   509→func (s *Struct) nested
tags.go
     6→type tagOptions
     9→func (t tagOptions) Has
    22→func parseTag
